[tool.poetry]
name = "dclm"
version = "0.1.0"
description = ""
authors = ["andrew siah <theandrewsiah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^24.2.0"
pyyaml = "^6.0.2"
loguru = "^0.7.2"
numpy = "1.26.4"
pytest-timeout = "^2.3.1"
nltk = "^3.9.1"
transformers = "4.40"
uniseg = "^0.8.1"
fasttext = "^0.9.3"
jsonlines = "^4.0.0"
blingfire = "^0.1.8"
pandas = "2.1.4"
sentencepiece = "0.1.97"
kenlm = {url = "https://github.com/kpu/kenlm/archive/master.zip"}
langdetect = "^1.0.9"
retrie = "^0.3.1"
justext = "^3.0.1"
lxml = "^5.3.0"
cloudpathlib = "^0.19.0"
moto = "^5.0.13"
scipy = "^1.14.1"
fire = "^0.6.0"
braceexpand = "^0.1.7"
pysimdjson = "^6.0.2"
gitpython = "^3.1.43"
unidecode = "^1.3.8"
beautifulsoup4 = "^4.12.3"
zstandard = "^0.23.0"
lxml-html-clean = "^0.2.2"
s3fs = "2023.6.0"
llm-foundry = "0.9.0"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.35.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
